--- a/.github/workflows/on_push_feature.yml
+++ b/.github/workflows/on_push_feature.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   process-push:
-    name: Execute push on all branches except main
+    name: Execute push on feature branch
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
