--- a/.github/workflows/on_push_main.yml
+++ b/.github/workflows/on_push_main.yml
@@ -16,6 +16,11 @@ jobs:
           fetch-depth: 0
       - name: Show me you are working
         run: echo "This is the 'Push to main workflow'!!!"
-      - name: Application Version
+      - name: Determine application version
         id: version
         uses: paulhatch/semantic-version@v5.4.0
+      - name: Tag branch
+        uses: rickstaa/action-create-tag@v1
+        id: tag_create
+        with:
+          tag: ${{steps.version.outputs.version}}
