--- a/.github/workflows/on_push_main.yml
+++ b/.github/workflows/on_push_main.yml
@@ -21,6 +21,8 @@ jobs:
         uses: paulhatch/semantic-version@v5.4.0
       - name: Tag branch
         uses: rickstaa/action-create-tag@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         id: tag_create
         with:
           tag: ${{steps.version.outputs.version}}
