--- a/.github/workflows/on_push_main.yml
+++ b/.github/workflows/on_push_main.yml
@@ -9,6 +9,9 @@ jobs:
   process-push:
     name: Execute push on main
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
