--- a/.github/workflows/on_push_main.yml
+++ b/.github/workflows/on_push_main.yml
@@ -28,4 +28,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         id: tag_create
         with:
-          tag: ${{steps.version.outputs.version}}
+          tag: ${{steps.version.outputs.version_tag}}
