--- a/.github/workflows/on_push_main.yml
+++ b/.github/workflows/on_push_main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Determine application version
         id: version
         uses: paulhatch/semantic-version@v5.4.0
-      - name: Tag the branch with the application workflow
+      - name: Tag the branch with the application version
         uses: rickstaa/action-create-tag@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
