--- a/.github/workflows/on_push_feature.yml
+++ b/.github/workflows/on_push_feature.yml
@@ -18,14 +18,16 @@ jobs:
         with:
           fetch-depth: 0
       - name: Determine feature tag value
-        id: version
+        id: determine_version
         uses: paulhatch/semantic-version@v5.4.0
-      - name: Tag the branch with the feature version
+      - name: Create a tag for the feature
+        id: feature_tag
+        run: echo value=${{ steps.version.outputs.version_tag }}-${{ env.GITHUB_REF_NAME }} >> $GITHUB_OUTPUT
+      - name: Show the feature tag value
+        run: 'echo This is the feature tag value that any job or step in the workflow can now use: ${{steps.feature_tag.outputs.value}}'
+      - name: Tag the branch with the feature tag value
         uses: rickstaa/action-create-tag@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: ${{ env.GITHUB_REF_NAME }}
         with:
-          tag: ${{steps.version.outputs.version_tag}}-${{ env.BRANCH_NAME }}
-      - name: Show the feature tag value
-        run: 'echo This is the feature tag value that any job or step in the workflow can now use: ${{steps.version.outputs.version_tag}}'
+          tag: ${{ steps.feature_tag.outputs.value }}
