--- a/.github/workflows/on_push_feature.yml
+++ b/.github/workflows/on_push_feature.yml
@@ -10,10 +10,24 @@ jobs:
   process-push:
     name: Execute push on feature branch
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # this must be set to 'write' in order for the workflow to add a tag
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Show me you are working
-        run: echo "This is the 'Push to feature branch'!!!"
+      - name: Determine feature tag value
+        id: determine_version
+        uses: paulhatch/semantic-version@v5.4.0
+      - name: Create a tag for the feature
+        id: feature_tag
+        run: echo "value=${{ steps.determine_version.outputs.version_tag }}-${GITHUB_REF_NAME}" >> $GITHUB_OUTPUT
+      - name: Show the feature tag value
+        run: 'echo This is the feature tag value that any job or step in the workflow can now use: ${{steps.feature_tag.outputs.value}}'
+      - name: Tag the branch with the feature tag value
+        uses: rickstaa/action-create-tag@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag: ${{ steps.feature_tag.outputs.value }}
